test/parser/gc/gc_missing_expr.yl
// RUN: compiler %s 2>&1 -ast-dump | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:9: error: expected expression
  gcMut();
}
